--- a/templates/kinsdb/UNIST/document-detail.html
+++ b/templates/kinsdb/UNIST/document-detail.html
@@ -221,7 +221,7 @@
           <div class="col-lg-10">
           </div>
           <div class="col-lg-2 mt-4">
-            <button type="button" name="button" class="btn btn-primary w-100" onclick=location.href="{% url 'document' %}">목록</button>
+            <button type="button" name="button" class="btn btn-primary w-100" onclick=location.href="{% url 'document' doc_num=11 %}">목록</button>
           </div>
         </div>
       </div>
