--- a/templates/kinsdb/UNIST/unist.html
+++ b/templates/kinsdb/UNIST/unist.html
@@ -136,12 +136,14 @@
                 <tr>
                   <th rowspan="3">평가 베이시스</th>
                   <th>부지 특성</th>
+
                   <td rowspan="3">
                     <p>EPG</p>
                   </td>
+
                   <td rowspan="3">
-                    <p>1) 「Dossier 2005 Argile」 규제 검토 사례(프랑스)</p>
-                    <p>2) 프랑스 부지조사단계 검토 사례 (URL 부지선정)</p>
+                    <p class="data" onclick=location.href="{% url 'report' report_num=1 %}">1) 「Dossier 2005 Argile」 규제 검토 사례(프랑스)</p>
+                    <p class="data" onclick=location.href="{% url 'report' report_num=2 %}">2) 프랑스 부지조사단계 검토 사례 (URL 부지선정)</p>
                     <p>3) 스위스 타당성 조사 규제 검토 사례</p>
                   </td>
 
@@ -169,6 +171,7 @@
                       post closure safety case of the spent nuclear fuel disposal<br>
                       in Olkiluoto (핀란드, 2015, STUK)</p>
                   </td>
+
 
                   <td>
                     <p>14) SSM 건설 인허가 규제 검토 (초기 검토 단계, 스웨덴)</p>
