--- a/templates/kinsdb/UNIST/issue-detail.html
+++ b/templates/kinsdb/UNIST/issue-detail.html
@@ -14,14 +14,17 @@
     border: none !important;
   }
 
-  .bisection {
-    column-count: 2;
+  .custom-container {
+    max-width: 80% !important;
+    margin-left: auto;
+    margin-right: auto;
   }
 
-  .bisection h6 {
-    break-before: column;
+  td {
+    padding: 8px !important;
+    vertical-align: middle;
+    width: 50%;
   }
-
 </style>
 {% endblock extra_css %}
 {% block content %}
@@ -36,8 +39,8 @@
             <nav class="d-inline-block" aria-label="breadcrumb text-center">
               <ol class="breadcrumb justify-content-center">
                 <li class="breadcrumb-item"><a href="{% url 'database-index' %}">Database</a></li>
-                <li class="breadcrumb-item"><a href="{% url 'brnc' %}">BRNC</a></li>
-                <li class="breadcrumb-item active" aria-current="page"> 문서 </li>
+                <li class="breadcrumb-item"><a href="{% url 'brnc' %}">SafetyCase</a></li>
+                <li class="breadcrumb-item active" aria-current="page"> 구리부식 </li>
               </ol>
             </nav>
           </div>
@@ -64,21 +67,21 @@
 
 <!-- START CANDIDATE-DETAILS -->
 <section class="section">
-  <div class="container">
+  <div class="custom-container">
     <div class="row">
       <div class="col-lg-4">
         <div class="card side-bar">
 
 
           <div class="candidate-profile-overview  card-body border-top p-4">
-            <h6 class="fs-17 fw-semibold mb-3">지층처분장의 고준의방폐물 처분</h6>
+            <h6 class="fs-17 fw-semibold mb-3">구리 부식</h6>
             <ul class="list-unstyled mb-0">
 
               <li>
                 <div class="d-flex">
-                  <label class="text-dark">문서번호</label>
+                  <label class="text-dark">검토 보고서</label>
                   <div>
-                    <p class="text-muted mb-0">{{ doc.document.serial_num }}</p>
+                    <p class="text-muted mb-0">2012:21 Technical Note, Initial Review Phase for SKBs Safety Assessment SR-Site: Corrosion of Copper</p>
                   </div>
                 </div>
               </li>
@@ -86,39 +89,38 @@
                 <div class="d-flex">
                   <label class="text-dark">기관/국가</label>
                   <div>
-                    <p class="text-muted mb-0">{{ doc.document.institution }}</p>
+                    <p class="text-muted mb-0">스웨덴</p>
                   </div>
                 </div>
               </li>
 
-              <li>
-                <div class="d-flex">
-                  <label class="text-dark">작성자</label>
-                  <div>
-                    <p class="text-muted mb-0">{{ doc.writer.company }} | {{ doc.writer.dept }}</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="d-flex">
-                  <label class="text-dark">조회</label>
-                  <div>
-                    <p class="text-muted mb-0">{{ doc.views }}</p>
-                  </div>
-                </div>
-              </li>
 
 
             </ul>
 
             <ul class="list-inline d-flex justify-content-between align-items-center">
-              <li class="list-inline-item text-warning review-rating">
-              </li>
-              <li class="list-inline-item mb-0">
-                <div class="favorite-icon">
-                  <a href="javascript:void(0)"><i class="uil uil-folder-plus fs-18"></i></a>
-                </div>
-              </li>
+              <table class="table table-bordered table-striped mb-0">
+                <thead>
+                  <tr>
+                    <td>검토한 보고서</td>
+                    <td>검토된 Section</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>SKB TR-11-01-Vol.I</td>
+                    <td>4.8.2, 5.2.1, 5.4, 5.5.2, 5.5.3, 5.6.1, Tab7-7, 8.3.2, 8.3.4, Tab8-1</td>
+                  </tr>
+                  <tr>
+                    <td>SKB TR-11-01-Vol.II</td>
+                    <td>10.2.5, 10.3.7, 10.3.13, 10.3.16</td>
+                  </tr>
+                  <tr>
+                    <td>SKB TR-11-01-Vol.III</td>
+                    <td>12.6</td>
+                  </tr>
+                </tbody>
+              </table>
             </ul>
           </div>
 
@@ -129,7 +131,7 @@
               <!-- TAGS -->
 
               {% for tag in doc.tags.all %}
-              <span class="badge bg-soft-muted fs-14 mt-1">#{{ tag.tag_content }}</span>
+              <span class="badge bg-soft-muted fs-14 mt-1" onclick=location.href="#">#{{ tag.tag_content }}</span>
               {% endfor %}
             </ul>
           </div>
@@ -154,31 +156,57 @@
                     </div>
                     <div class="ms-3">
                       <h6 class="fs-16 mb-0">
-                        {% with doc.document.file.name|split:"/"|last as file %}
-                        {{ file }}{% endwith %}
+                        2012:21 Technical Note, Initial Review Phase for SKBs Safety Assessment SR-Site: Corrosion of Copper
                       </h6>
                       <p class="text-muted mb-0">{{ doc.document.file.size|filesizeformat }}</p>
                     </div>
                     <div class="ms-auto">
-                      <a onclick=location.href="{% url 'download_file' filename=doc.document.file %}" download="dark-logo" class="fs-20 text-muted"><i class="uil uil-import"></i></a>
+                      <a onclick=location.href="#" download="dark-logo" class="fs-20 text-muted"><i class="uil uil-import"></i></a>
                     </div>
                   </div>
                 </li>
 
               </ul>
             </div>
-            <div class="candidate-education-details bisection mt-4 pt-3">
-              <div class="eng">
-                <h6 class="fs-17 fw-bold mb-0"> [{{ doc.index_num }}] {{ doc.index_title }}</h6>
-                <div class="candidate-education-content mt-4">
-                  <p class="text-muted">{{ doc.content_eng }}</p>
-                </div>
+
+
+            <div class="mt-4 border-bottom pb-4">
+              <h5 class="fs-17 fw-bold mb-3">적용된 규제요건</h5>
+              <ul class="profile-document list-unstyled mb-0">
+
+                <li>
+                  <div class="profile-document-list d-flex align-items-center mt-4 ">
+                    <ul>
+                      <li>법령(시행령): <span style="color: blue; text-decoration:underline;">ACT on Nuclear Activities 1984:3, Ordinance on Nuclear Activities 1984:14</span></li>
+                      <li>규정(규제 지침):<span style="color: blue; text-decoration:underline;">SSMFS 2008:21, SSMFS 2008:37</span></li>
+                    </ul>
+                  </div>
+                </li>
+
+              </ul>
+            </div>
+
+
+            <div class="candidate-education-details mt-4 pt-3">
+
+              <h6 class="fs-17 fw-bold mb-0">Summary</h6>
+              <div class="candidate-education-content m-2 mb-4">
+                <ol>
+                  <li class="text-muted">액체 수소의 대량 수송이 혐기성환경 부식률을 제한한다는 SKB의 실험 및 문헌</li>
+                  <li class="text-muted"> 구리가 자발적으로 부식되 지 않는다고 설명한 pH > 4 및 Cl- < 2 M 조건에서의 전류(current position) 보충설명</li>
+                  <li class="text-muted">Cu2S 산화층이 Parabolic rate로 생성되지 않는다는 증거</li>
+                  <li class="text-muted">황화수소 유무와 호기성, 혐기성 분위기에서의 혼합 전위와 부식 전위의 모델링</li>
+                  <li class="text-muted">냉간가공재료(Cold worked material)의 부식 영향 정도에 대한 추가적인 정보</li>
+                </ol>
               </div>
-              <div class="kor">
-                <h6 class="fs-17 fw-bold mb-0"> [{{ doc.index_num }}] {{ doc.index_title }}</h6>
-                <div class="candidate-education-content mt-4">
-                  <p class="text-muted">{{ doc.content_kor }}</p>
-                </div>
+
+              <h6 class="fs-17 fw-bold mb-0">SKB에 제안해야 하는 보충 정보</h6>
+              <div class="candidate-education-content m-2 mb-4">
+                <ol>
+                  <li class="text-muted">감마선 조사에 의해 생성된 산화조건에서 SCC가 더 발생하는지 여부에 대한 확인</li>
+                  <li class="text-muted">기존의 구리 부식 메커니즘인 느린 물질 전달 프로세스로서 제한되는 구리 부식이, 벤토나이트가 완전히 포화되지 않았을 때 기체상 수송 조건과 같은 빠른 물질 전달 수송 가정 조건의 실현 가능성에 관한 해결되지 않은 이슈 사항이 있음</li>
+                  <li class="text-muted"> 인지하지 못한 Pb 축적으로 인한 고체 금속 경화(embrittleness)와 같은 현상에 대해서도 검토를 수행하여야 함</li>
+                </ol>
               </div>
 
             </div>
@@ -193,7 +221,7 @@
           <div class="col-lg-10">
           </div>
           <div class="col-lg-2 mt-4">
-            <button type="button" name="button" class="btn btn-primary w-100" onclick=location.href="{% url 'regulation_database' %}">목록</button>
+            <button type="button" name="button" class="btn btn-primary w-100" onclick=location.href="{% url 'report' report_num=report_num %}">목록</button>
           </div>
         </div>
       </div>
