--- a/templates/kinsdb/BRNC/laws_summary/brnc_kor.html
+++ b/templates/kinsdb/BRNC/laws_summary/brnc_kor.html
@@ -25,29 +25,29 @@
 
       <tr>
         <td rowspan="3" style="width:10%">법령</td>
-        <td>원자력안전법</td>
+        <td class="data" onclick=location.href='https://www.law.go.kr/LSW/lsSc.do?dt=20201211&subMenuId=15&menuId=1&query=%EC%9B%90%EC%9E%90%EB%A0%A5%EC%95%88%EC%A0%84%EB%B2%95#undefined' >원자력안전법</td>
         <td>TBD</td>
       </tr>
 
       <tr>
-        <td>원자력안전법 시행령</td>
+        <td class="data" onclick=location.href='https://www.law.go.kr/LSW/lsSc.do?dt=20201211&subMenuId=15&menuId=1&query=%EC%9B%90%EC%9E%90%EB%A0%A5%EC%95%88%EC%A0%84%EB%B2%95#undefined' >원자력안전법 시행령</td>
         <td>TBD</td>
       </tr>
 
       <tr>
-        <td>원자력안전법 시행규칙</td>
+        <td class="data" onclick=location.href='https://www.law.go.kr/LSW/lsSc.do?dt=20201211&subMenuId=15&menuId=1&query=%EC%9B%90%EC%9E%90%EB%A0%A5%EC%95%88%EC%A0%84%EB%B2%95#undefined'>원자력안전법 시행규칙</td>
         <td>TBD</td>
       </tr>
 
 
       <tr>
         <td rowspan="2" style="width:10%">행정규칙</td>
-        <td>방사선 안전관리 등의 기술기준에 관한 규칙</td>
+        <td class="data" onclick=location.href='https://www.law.go.kr/admRulSc.do?menuId=5&subMenuId=41&tabMenuId=183&query=%EB%B0%A9%EC%82%AC%EC%84%A0%20%EC%95%88%EC%A0%84%EA%B4%80%EB%A6%AC%20%EB%93%B1%EC%9D%98#liBgcolor0' >방사선 안전관리 등의 기술기준에 관한 규칙</td>
         <td>TBD</td>
       </tr>
 
       <tr>
-        <td>고준위방사성폐기물 심층처분시설에 관한 일반기준</td>
+        <td class="data" onclick=location.href='https://www.law.go.kr/admRulSc.do?menuId=5&subMenuId=41&tabMenuId=183&query=%EA%B3%A0%EC%A4%80%EC%9C%84#liBgcolor0'>고준위방사성폐기물 심층처분시설에 관한 일반기준</td>
         <td>TBD</td>
       </tr>
 
