--- a/templates/kinsdb/UNIST/unist.html
+++ b/templates/kinsdb/UNIST/unist.html
@@ -144,7 +144,7 @@
                   <td rowspan="3">
                     <p class="data" onclick=location.href="{% url 'report' report_num=1 %}">1) 「Dossier 2005 Argile」 규제 검토 사례(프랑스)</p>
                     <p class="data" onclick=location.href="{% url 'report' report_num=2 %}">2) 프랑스 부지조사단계 검토 사례 (URL 부지선정)</p>
-                    <p>3) 스위스 타당성 조사 규제 검토 사례</p>
+                    <p class="data" onclick=location.href="{% url 'report' report_num=3 %}">3) 스위스 타당성 조사 규제 검토 사례</p>
                   </td>
 
                   <td rowspan="3">
@@ -153,11 +153,11 @@
                   </td>
 
                   <td>
-                    <p>4) ZIRA 선정과정 규제 검토 사례 (프랑스)</p>
-                    <p>5) INSTIE 검토 그룹(지질관련) 이슈 리스트 (스웨덴)</p>
-                    <p>6) 스웨덴 부지 조사 단계(현장조사 3단계)</p>
-                    <p>7) SR-Can 외부 전문가 검토 사례 (스웨덴)</p>
-                    <p>8) 스위스의 부지조사 단계 규제 검토 사례</p>
+                    <p class="data" onclick=location.href="{% url 'report' report_num=4 %}">4) ZIRA 선정과정 규제 검토 사례 (프랑스)</p>
+                    <p class="data" onclick=location.href="{% url 'report' report_num=5 %}">5) INSTIE 검토 그룹(지질관련) 이슈 리스트 (스웨덴)</p>
+                    <p class="data" onclick=location.href="{% url 'report' report_num=6 %}">6) 스웨덴 부지 조사 단계(현장조사 3단계)</p>
+                    <p class="data" onclick=location.href="{% url 'report' report_num=7 %}">7) SR-Can 외부 전문가 검토 사례 (스웨덴)</p>
+                    <p class="data" onclick=location.href="{% url 'report' report_num=8 %}">8) 스위스의 부지조사 단계 규제 검토 사례</p>
                   </td>
 
 
@@ -165,7 +165,7 @@
                     <p>EPG</p>
                     <p>SITEX-Ⅱ Project</p>
 
-                    <p class="data" onclick=location.href="{% url 'document' doc_num=11 %}">11) SR-Site initial review (스웨덴, 2011~2013, SSM)</p>
+                    <p>11) SR-Site initial review (스웨덴, 2011~2013, SSM)</p>
                     <p>12) SR-Site Main review (스웨덴, 2013~2015, SSM)</p>
                     <p>13) STUK's review on the construction license stage<br>
                       post closure safety case of the spent nuclear fuel disposal<br>
@@ -174,8 +174,8 @@
 
 
                   <td>
-                    <p>14) SSM 건설 인허가 규제 검토 (초기 검토 단계, 스웨덴)</p>
-                    <p>15) SSM 건설 인허가 규제 검토 (주 검토 단계, 스웨덴)</p>
+                    <p class="data" onclick=location.href="{% url 'report' report_num=14 %}">14) SSM 건설 인허가 규제 검토 (초기 검토 단계, 스웨덴)</p>
+                    <p class="data" onclick=location.href="{% url 'report' report_num=15 %}">15) SSM 건설 인허가 규제 검토 (주 검토 단계, 스웨덴)</p>
                   </td>
                   <td rowspan="3">
                     <p>EPG</p>
@@ -191,14 +191,14 @@
                 <tr>
                   <th>처분장 설계</th>
                   <td>
-                    <p>9) SR-Can 외부 전문가 검토 사례 (스웨덴)</p>
+                    <p class="data" onclick=location.href="{% url 'report' report_num=9 %}">9) SR-Can 외부 전문가 검토 사례 (스웨덴)</p>
                   </td>
                   <td>
-                    <p>16) 핀란드 ONKALO 건설 관련 규제 검토 사례</p>
-                    <p>17) 스웨덴 토지환경법원의 인허가 보고서 규제 검토 사례</p>
-                    <p>18) SSM 건설 인허가 규제 검토 (초기 검토 단계, 스웨덴)</p>
-                    <p>19) SSM 건설 인허가 규제 검토 (주 검토 단계, 스웨덴)</p>
-                    <p>20) STUK 건설 인허가 검토 사례 (핀란드, 공학적방벽)</p>
+                    <p class="data" onclick=location.href="{% url 'report' report_num=16 %}">16) 핀란드 ONKALO 건설 관련 규제 검토 사례</p>
+                    <p class="data" onclick=location.href="{% url 'report' report_num=17 %}">17) 스웨덴 토지환경법원의 인허가 보고서 규제 검토 사례</p>
+                    <p class="data" onclick=location.href="{% url 'report' report_num=18 %}">18) SSM 건설 인허가 규제 검토 (초기 검토 단계, 스웨덴)</p>
+                    <p class="data" onclick=location.href="{% url 'report' report_num=19 %}">19) SSM 건설 인허가 규제 검토 (주 검토 단계, 스웨덴)</p>
+                    <p class="data" onclick=location.href="{% url 'report' report_num=20 %}">20) STUK 건설 인허가 검토 사례 (핀란드, 공학적방벽)</p>
                   </td>
                   <td></td>
                   <td></td>
