--- a/templates/kinsdb/BRNC/brnc.html
+++ b/templates/kinsdb/BRNC/brnc.html
@@ -56,7 +56,7 @@
     padding-top: 20px;
   }
 
-  .entire td{
+  .entire td {
     font-size: 7px;
   }
 
@@ -107,13 +107,13 @@
   <div class="container">
 
     <div class="row">
+      <!-- <h6 class="card-title">데이터베이스 보기</h6> -->
+      <!-- <p class="text-muted">규제기준 데이터베이스 바로가기</p> -->
+
+      <a href="{% url 'regulation_database' %}" class="btn btn-primary">Database 접속</a>
+
       <div class="col-lg-12">
         <div class="mt-5">
-          <h6 class="card-title">데이터베이스 보기</h6>
-          <a href="{% url 'regulation_database' %}" class="btn btn-primary">Database 접속</a>
-
-          <!-- <p class="text-muted">규제기준 데이터베이스 바로가기</p> -->
-
 
           <ul class="nav nav-pills custom" role="tablist">
             <li class="nav-item waves-effect waves-light">
@@ -378,20 +378,20 @@
             </div>
 
             <div class="tab-pane" id="SWE" role="tabpanel">
-                {% include 'kinsdb/BRNC/laws_summary/brnc_swe.html' %}
+              {% include 'kinsdb/BRNC/laws_summary/brnc_swe.html' %}
             </div>
 
             <div class="tab-pane" id="FIN" role="tabpanel">
-                {% include 'kinsdb/BRNC/laws_summary/brnc_fin.html' %}
+              {% include 'kinsdb/BRNC/laws_summary/brnc_fin.html' %}
             </div>
 
 
             <div class="tab-pane" id="FRA" role="tabpanel">
-                {% include 'kinsdb/BRNC/laws_summary/brnc_fra.html' %}
+              {% include 'kinsdb/BRNC/laws_summary/brnc_fra.html' %}
             </div>
 
             <div class="tab-pane" id="GER" role="tabpanel">
-                {% include 'kinsdb/BRNC/laws_summary/brnc_ger.html' %}
+              {% include 'kinsdb/BRNC/laws_summary/brnc_ger.html' %}
             </div>
 
             <div class="tab-pane" id="CAN" role="tabpanel">
