--- a/templates/kinsdb/UNIST/issue-detail.html
+++ b/templates/kinsdb/UNIST/issue-detail.html
@@ -34,15 +34,9 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="text-center text-white">
-          <h3 class="mb-4">문서</h3>
+          <h3 class="mb-4">{{ issue.issue }}</h3>
           <div class="page-next">
-            <nav class="d-inline-block" aria-label="breadcrumb text-center">
-              <ol class="breadcrumb justify-content-center">
-                <li class="breadcrumb-item"><a href="{% url 'database-index' %}">Database</a></li>
-                <li class="breadcrumb-item"><a href="{% url 'brnc' %}">SafetyCase</a></li>
-                <li class="breadcrumb-item active" aria-current="page"> 구리부식 </li>
-              </ol>
-            </nav>
+
           </div>
         </div>
       </div>
